# Essential_CPlusPlus

./: .gitignore  README.md
Essential C++ reference code/codeEssential/chapter1/ch1solutions/: ch1solutions.dsp  ch1solutions.dsw  ch1solutions.plg
Essential C++ reference code/codeEssential/chapter1/chap1/: chap1.dsp  chap1.dsw  chap1.ncb  chap1.opt  chap1.plg
Essential C++ reference code/codeEssential/chapter2/ch2solutions/: ch2main.cpp  ch2solutions.dsp  ch2solutions.dsw  ch2solutions.ncb  ch2solutions.opt  ch2solutions.plg
Essential C++ reference code/codeEssential/chapter2/chap2/: c2_main.cpp  chap2.dsp  chap2.dsw  chap2.plg
codes/: CMakeLists.txt  main.cpp  swap.cpp
codes/basic_content/const/: README.md  const_function.cpp  const_function.h
codes/book_practices/chp1/: chp1.cpp  chp1.h  output.txt
codes/book_practices/chp2/: chp2.cpp  chp2.h  chp2_5.cpp  chp2_6.cpp
codes/book_practices/chp3/: chp3_1.cpp  chp3_2.cpp  chp3_3.cpp  chp3_4.cpp  even_number.txt  odd_number.txt
codes/book_practices/chp4/: chp4.h  chp4_2.cpp  chp4_3.h  chp4_4.cpp  chp4_5.cpp  operate_reload.cpp
codes/book_practices/chp5/: chp5.h  virtualfunc.cpp
codes/book_practices/chp6/: chp6.h  chp6_1.cpp  chp6_2.cpp  log.txt
codes/book_practices/chp7/: chp7.cpp  chp7.h
codes/book_practices/classdemo/: pointclass.cpp
codes/chp1/: chp1.cpp  chp1.h
codes/chp2/: chp2.h  chp2_6.cpp
codes/chp3/: chp3.h  chp3_1.cpp  chp3_2.cpp  chp3_3.cpp  chp3_4.cpp  test_data.txt
codes/chp4/: chp4.h  chp4_4.cpp  shp4_1.cpp  static_func.cpp
codes/chp5/: chp5.h  chp5_1.cpp  virtualfunc.cpp
codes/classdemo/: pointclass.h
(+49 files in other folders)
